<resources>
    <string name="app_name">Simple Astronomy POD</string>

    <string name="picture_menu_download">Download HD Image</string>
    <string name="picture_menu_source">Source</string>

    <string name="sample_title" translatable="false">M1: The Crab Nebula from Hubble</string>
    <string name="sample_explanation" translatable="false">This is the mess that is left when a star explodes.
        The Crab Nebula, the result of a supernova seen in 1054 AD, is filled with mysterious filaments.
        The filaments are not only tremendously complex, but appear to have less mass than expelled in the original supernova and a higher speed than expected from a free explosion.
        The featured image, taken by the Hubble Space Telescope, is presented in three colors chosen for scientific interest.
        The Crab Nebula spans about 10 light-years.  In the nebula's very center lies a pulsar: a neutron star as massive as the Sun but with only the size of a small town.
        The Crab Pulsar rotates about 30 times each second.</string>

    <string name="picture_content_description">The astronomy image of the day for today</string>
    <string name="picture_play_content_description">Play the video from the picture of the day</string>
    <string name="picture_text_loading">Loading</string>

    <string name="url_nasa_apod" translatable="false">https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY&amp;hd=true</string>
    <string name="url_nasa_source" translatable="false">https://apod.nasa.gov/apod/astropix.html</string>
    <string name="url_youtube_thumbnail" translatable="false">https://img.youtube.com/vi/{0}/0.jpg</string>

    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_message">There was a problem downloading the latest picture of the day from NASA.
    Check your internet connection and try again.</string>
    <string name="dialog_error_positive">OK</string>
</resources>
