<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/layout_picture_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureActivity"
    tools:menu="menu_picture">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/layout_picture_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/text_picture_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    tools:text="@string/sample_title"/>

                <View
                    android:id="@+id/divider_picture_content"
                    android:layout_width="128dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:visibility="invisible"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/text_picture_explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="start"
                    android:textAppearance="@android:style/TextAppearance.Material.Body1"
                    tools:text="@string/sample_explanation"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_picture_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"
                android:text="@string/picture_text_loading"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                tools:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/progress_picture_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text_picture_load"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="8dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:visibility="invisible"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/semiTransColorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <ImageView
                    android:id="@+id/image_picture_pod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="320dp"
                    android:contentDescription="@string/picture_content_description"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    tools:src="@drawable/crabnebula_hubble_960"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/image_picture_play"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_play_circle_outline"
                    android:visibility="gone"
                    android:clickable="true"
                    android:focusable="true"
                    tools:visibility="visible"
                    app:layout_constraintStart_toStartOf="@+id/image_picture_pod"
                    app:layout_constraintTop_toTopOf="@+id/image_picture_pod"
                    app:layout_constraintEnd_toEndOf="@+id/image_picture_pod"
                    app:layout_constraintBottom_toBottomOf="@+id/image_picture_pod"
                    android:contentDescription="@string/picture_play_content_description" />

            </android.support.constraint.ConstraintLayout>
            
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_picture_top"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:titleTextColor="@android:color/white"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>